--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^6.5.1",
+    "i18next": "^23.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "sass": "^1.57.1"
   },
   "devDependencies": {
